--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+echo "* text=auto" > .gitattributes
+git add .gitattributes
+git commit -m "Add .gitattributes to normalize line endings"
