--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.2",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.9.3",
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^17.5.0"
   }
 }
